Fix: Make Video Editing visible

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -203,20 +203,17 @@
 @media only screen and (max-width: 1025px) {
   .work-container {
     align-content: normal;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   .work-flex {
-    height: auto;
-    overflow-x: auto !important;
-    -webkit-overflow-scrolling: touch;
-    scroll-snap-type: x mandatory;
+    height: 100%;
+    overflow: visible;
     margin-left: 0 !important;
-    padding-right: 0 !important;
+    padding-right: 40px !important;
   }
   .work-box {
-    scroll-snap-align: start;
-    width: 85vw !important;
-    max-width: 380px;
+    width: 320px !important;
+    max-width: 320px;
     padding: 30px 20px !important;
   }
 }
